<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/recargar_cuenta"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/transferNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogTitle"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit"
        android:hint="@string/number"
        android:inputType="phone"
        android:padding="5dp"
        android:text="@string/my_phone"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linearLayoutPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transferNumber"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_edit"
            android:hint="@string/pin"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"
            android:autofillHints="" />

        <EditText
            android:id="@+id/balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_edit"
            android:hint="@string/saldo"
            android:inputType="number"
            android:maxLength="4"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutPIN"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button_bg"
        android:onClick="rechargeBachecubano"
        android:text="@string/recargar_bachecubano"
        android:textColor="@color/colorAccent" />

</RelativeLayout>
